# blrs-cli

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: rust.yml
src/: cli_args.rs  commands.rs  errs.rs  fetcher.rs  ls.rs  main.rs  pull.rs  repo_formatting.rs  resolving.rs  run.rs  tasks.rs  verify.rs
src/commands/: fetcher.rs  ls.rs  pull.rs  rm.rs  verify.rs
