[package]
name = "blrs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
async-std = "1.13.0"
blrs = { path = "../blrs" }
cargo-util = "0.2.14"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
figment = "0.10.19"
indicatif = { version = "0.17.8", features = ["rayon", "tokio", "futures"] }
log = "0.4.22"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
